[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cromio"
version = "0.0.0"
description = "Cromio Server"
dependencies = [
    "pydantic==2.10.6",
    "watchdog==4.0.1",
    "prometheus_client==0.14.1"
]

[tool.setuptools]
packages = ["cromio"]
package-dir = { "" = "src" }
